@@ -316,7 +316,6 @@ exchangeclone.mcl_energy_values = {
         bedrock = 0,
         deadbush = 4,
         mossycobble = 9,
-        gravel = 3,
         stick = 4,
         flint = 4,
         cactus = 8,
@@ -342,7 +341,7 @@ exchangeclone.mcl_energy_values = {
         stone_with_iron = 0,
         lapis = 864,
         stone_with_lapis = 0,
-        emerald = 1024,
+        emerald = 4096,
         stone_with_emerald = 0,
         gold_ingot = 2048,
         stone_with_gold = 0,
@@ -363,7 +362,7 @@ exchangeclone.mcl_energy_values = {
         slimeblock = 216,
         snow = 0.5,
         glass = 1,
-        emeraldblock = 1024*9,
+        emeraldblock = 4096*9,
     },
     ["mcl_droppers"] = {
         dropper = 71,
@@ -649,7 +648,7 @@ exchangeclone.mcl_energy_values = {
         quartz_pillar = 512,
         quartz_smooth = 512,
         magma = 4,
-        netheriteblock = 663552, --quite a bit.
+        netheriteblock = 663552,
     },
     ["mcl_observers"] = {
         observer_off = 262,
@@ -758,22 +757,23 @@ exchangeclone.mcl_energy_values = {
         raw_copper = 85,
         block_raw = 765,
         stone_with_copper = 0,
-        block = 765,
-        block_exposed = 765,
-        block_oxidized = 765,
-        block_weathered = 765,
-        block_cut = 765,
-        block_exposed_cut = 765,
-        block_oxidized_cut = 765,
-        block_weathered_cut = 765,
-        waxed_block = 797,
-        waxed_block_exposed = 797,
-        waxed_block_oxidized = 797,
-        waxed_block_weathered = 797,
-        waxed_block_cut = 797,
-        waxed_block_exposed_cut = 797,
-        waxed_block_oxidized_cut = 797,
-        waxed_block_weathered_cut = 797,
+        -- TODO: If MineClone switches to 9, change blocks to 765 (and 797 for waxed)
+        block = 340,
+        block_exposed = 340,
+        block_oxidized = 340,
+        block_weathered = 340,
+        block_cut = 340,
+        block_exposed_cut = 340,
+        block_oxidized_cut = 340,
+        block_weathered_cut = 340,
+        waxed_block = 372,
+        waxed_block_exposed = 372,
+        waxed_block_oxidized = 372,
+        waxed_block_weathered = 372,
+        waxed_block_cut = 372,
+        waxed_block_exposed_cut = 372,
+        waxed_block_oxidized_cut = 372,
+        waxed_block_weathered_cut = 372,
     },
     ["mcl_deepslate"] = {
         deepslate_with_coal = 0,
@@ -1168,6 +1168,24 @@ exchangeclone.mcl_energy_values = {
     },
     ["small_why_things"] = {
         craftable_barrier = 72,
+    },
+    ["mcl_colorblocks"] = {
+        glazed_terracotta_black = 64,
+        glazed_terracotta_blue = 64,
+        glazed_terracotta_brown = 64,
+        glazed_terracotta_cyan = 64,
+        glazed_terracotta_green = 64,
+        glazed_terracotta_grey = 64,
+        glazed_terracotta_light_blue = 64,
+        glazed_terracotta_lime = 64,
+        glazed_terracotta_magenta = 64,
+        glazed_terracotta_orange = 64,
+        glazed_terracotta_pink = 64,
+        glazed_terracotta_purple = 64,
+        glazed_terracotta_red = 64,
+        glazed_terracotta_silver = 64,
+        glazed_terracotta_white = 64,
+        glazed_terracotta_yellow = 64
     }
 }
 
@@ -1218,6 +1236,7 @@ exchangeclone.mcl_group_values = {
     {"carpet", 32},
     {"spawn_egg", 0},
     {"useless", 0},
+    {"hardened_clay", 64},
     {"NO_GROUP", 1},
 }
 
