@@ -14,7 +14,7 @@
         Crafted with a diamond in the middle, glowstone dust in the corners, and redstone dust on the sides (MineClone)
         Crafted with a diamond in the middle, tin ingots in the corners, and obsidian on the sides (Minetest Game)
         Can use to craft coal into iron, mese into diamonds, etc.
-    Ghost blocks are now worth 0 instead of 1 (to prevent infinite energy)
+    Why's Ghost blocks are now worth 0 instead of 1 (to prevent infinite energy)
     Fixed stairs and slabs not working in Minetest Game
     Changed the recipe for the Exchange Orb
         New recipe is a Philosopher's Stone in the middle, diamonds in the corners, and iron/steel ingots on the sides.
@@ -22,5 +22,15 @@
     Renamed images to reflect mod name change ("exchangeclone" instead of "ee" for Element Exchange)
     Deleted unnecessary "config.lua"
 2.1
+    The Energy Collector setting is now energy/second instead of second/energy to fit much higher costs than Element Exchange (default is 5 energy/s).
     Fixed Exchange Orb energy value (forgot to change it after changing the recipe)
     Changed constructor, deconstructor, and collector recipes and energy values to make them cheaper
+    The Constructor, Deconstructor, and Energy Collector are now not unbreakable in MineClone (I really should test in survival).
+    The Energy Collector now drops its contents when broken in MineClone.
+    Copper blocks are now worth 4 times as much as copper ingots instead of 9 (MineClone).
+    Fixed terracotta values (MineClone)
+    Set gravel value to 1 to match sand/stone/dirt/etc (MineClone).
+    Tuff, blackstone, and basalt are now transmutable (MineClone).
+    A couple of minor transmutation changes (MineClone).
+    Changed emerald value to 4096 (MineClone).
+    Gold cannot be crafted into diamonds using the PS; it can now be crafted into emeralds and emeralds into diamonds (MineClone).
